--- a/SujetSources/sources/Makefile
+++ b/SujetSources/sources/Makefile
@@ -2,11 +2,11 @@
 all: main1 main2 main3
 
 main1: main1.cu exercice.cu exercice.h image.o
-	nvcc main1.cu exercice.cu image.o -o main1
+	nvcc -allow-unsupported-compiler main1.cu exercice.cu image.o -o main1
 main2: main2.cu exercice.cu exercice.h image.o
-	nvcc main2.cu exercice.cu image.o -o main2
+	nvcc -allow-unsupported-compiler main2.cu exercice.cu image.o -o main2
 main3: main3.cu exercice.cu exercice.h image.o
-	nvcc main3.cu exercice.cu image.o -o main3
+	nvcc -allow-unsupported-compiler main3.cu exercice.cu image.o -o main3
 
 image.o: image.cpp image.h
 	g++ -c image.cpp
